--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,8 +9,7 @@
   <artifactId>myfaces-api</artifactId>
   <name>API</name>
   <description>
-    The MyFaces API Subproject provides a full set of the API interfaces and classes
-    defined in JSR-127 (see also http://www.jcp.org/en/jsr/detail?id=127).
+    MyFaces API - JSR 252 ( http://www.jcp.org/en/jsr/detail?id=252 )
   </description>
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/api</connection>
@@ -24,7 +23,6 @@
         <version>2.1.2</version>
         <configuration>
           <excludes>
-            <exclude>**/*FactoryFinderTest*</exclude>
             <exclude>**/*UIComponentBaseTest*</exclude>
           </excludes>
         </configuration>
