Fixed SCM entries so they correspond to the branch.  This is needed by continuum.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@411942 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
     <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
   </issueManagement>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk</developerConnection>
-    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12</url>
   </scm>
   <modules>
     <module>api</module>
