--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -15,9 +15,9 @@
   </parent>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/assembly</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/assembly</developerConnection>
-    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk/assembly</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12/assembly</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12/assembly</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12/assembly</url>
   </scm>
 
   <build>
