--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <repository>
       <snapshots />
       <id>apache-maven-snapshots</id>
-      <url>http://cvs.apache.org/maven-snapshot-repository</url>
+      <url>http://people.apache.org/maven-snapshot-repository</url>
     </repository>
   </repositories>
 </project>
