--- a/api/pom.xml
+++ b/api/pom.xml
@@ -209,7 +209,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>taglist-maven-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <version>2.0</version>
         <configuration>
           <tags>TODO, FIXME, XXX, @deprecated</tags>
         </configuration>
