--- a/api/pom.xml
+++ b/api/pom.xml
@@ -177,7 +177,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.0-beta-3</version>
+        <version>2.0</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
