--- a/api/pom.xml
+++ b/api/pom.xml
@@ -176,7 +176,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.0-beta-3</version>
+        <version>2.0</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -208,7 +208,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>taglist-maven-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <version>2.0</version>
         <configuration>
           <tags>TODO, FIXME, XXX, @deprecated</tags>
         </configuration>
