made calling of several javascript functions dependent on if they are actually present. Added source section to the poms. Default message now also prints the message of the causes of an exception.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@421297 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -46,4 +46,20 @@
       <url>http://myfaces.zones.apache.org/dist/maven-repository</url>
     </repository>
   </repositories>
+
+  <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-source</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
