--- a/api/pom.xml
+++ b/api/pom.xml
@@ -131,9 +131,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>javax.servlet.jsp.jstl</groupId>
+      <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
-      <version>1.2</version>
+      <version>1.1.2</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
