--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -221,8 +221,8 @@
     </dependency>
     <dependency>
        <groupId>org.mortbay.jetty</groupId>
-       <artifactId>jsp-2.1</artifactId>
-       <version>6.0.0beta17</version>
+       <artifactId>jsp</artifactId>
+       <version>2.1-6.0.0rc0</version>
        <scope>provided</scope>
     </dependency>    
     <dependency>
