--- a/api/pom.xml
+++ b/api/pom.xml
@@ -91,7 +91,7 @@
       <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jsp</artifactId>
-      <version>2.1-6.0.0beta17</version>
+      <version>2.1-6.0.0rc0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
