--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <enabled>true</enabled>
       </snapshots>
       <id>apache-maven-snapshots</id>
-      <url>http://cvs.apache.org/maven-snapshot-repository</url>
+      <url>people.apache.org/repo/m2-snapshot-repository</url>
     </repository>
     <repository>
       <releases>
