--- a/api/pom.xml
+++ b/api/pom.xml
@@ -125,9 +125,22 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.struts.shale</groupId>
+      <groupId>org.apache.shale</groupId>
       <artifactId>shale-test</artifactId>
-      <version>1.0.2</version>
+      <version>1.0.3-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>jmock</groupId>
+      <artifactId>jmock</artifactId>
+      <version>1.0.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>jmock</groupId>
+      <artifactId>jmock-cglib</artifactId>
+      <version>1.0.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
