--- a/pom.xml
+++ b/pom.xml
@@ -46,4 +46,17 @@
       <url>http://myfaces.zones.apache.org/dist/maven-repository</url>
     </repository>
   </repositories>
+  <distributionManagement>
+    <repository>
+      <id>apache.snapshots</id>
+      <name>Apache Maven Snapshot (and Test Build) Repository</name>
+      <url>scpexe://people.apache.org/www/people.apache.org/repo/m2-snapshot-repository</url>
+    </repository>
+    <snapshotRepository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>apache.snapshots</id>
+      <name>Apache Maven Snapshot Repository</name>
+      <url>scpexe://people.apache.org/www/people.apache.org/repo/m2-snapshot-repository</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
