added shale_103 + fix
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@432161 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -250,9 +250,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.struts.shale</groupId>
+      <groupId>org.apache.shale</groupId>
       <artifactId>shale-test</artifactId>
-      <version>1.0.2</version>
+      <version>1.0.3-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
