--- a/api/pom.xml
+++ b/api/pom.xml
@@ -144,10 +144,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
+      <groupId>jstl</groupId>
       <artifactId>jstl</artifactId>
-      <version>1.1.2</version>
-      <scope>compile</scope>
+      <version>1.2</version>    
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <artifactId>jsp-api</artifactId>
