Add maven-jar-plugin config to generate Implementation entries in the jar file manifest. Fix the <name> since it will appear in manifest
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_4@440240 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-api</artifactId>
-  <name>API</name>
+  <name>MyFaces API</name>
   <description>
     The MyFaces API Subproject provides a full set of the API interfaces and classes
     defined in JSR-127 (see also http://www.jcp.org/en/jsr/detail?id=127).
