--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -132,7 +132,7 @@
         <version>1.0.4-SNAPSHOT</version>
         <configuration>
           <id>myfaces-nightly-builds</id>
-          <url>scpexe://minotaur.apache.org/www/cvs.apache.org/builds/myfaces/nightly</url>
+          <url>scpexe://minotaur.apache.org/www/people.apache.org/builds/myfaces/nightly</url>
           <inputDirectory>target/assembly/out</inputDirectory>
         </configuration>
       </plugin>
