--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <enabled>true</enabled>
       </snapshots>
       <id>apache-maven-snapshots</id>
-      <url>http://cvs.apache.org/maven-snapshot-repository</url>
+      <url>http://people.apache.org/maven-snapshot-repository</url>
     </repository>
     <repository>
       <releases>
