Advance to version 1.1.4 for MyFaces Core api and impl. Set versions to 1.0.4 for myfaces-master, 2.0.3 for shared. Comment out snapshot dependencies on build-tools (code generation) and wagon-maven-plugin (nightly builds).
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_4@442005 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>myfaces-core-project</artifactId>
     <groupId>org.apache.myfaces.core</groupId>
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.4</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -47,6 +47,7 @@
         </plugins>
       </build>
     </profile>
+    <!-- Comment out for the release due to the snapshot dependency on build-tools
     <profile>
       <id>regenerate-component-code</id>
       <build>
@@ -91,6 +92,7 @@
         </plugins>
       </build>
     </profile>
+    -->
   </profiles>
   <dependencies>
     <dependency>
