--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.4</version>
   </parent>
 
   <scm>
@@ -100,7 +100,7 @@
 		<artifactItem>
                   <groupId>org.apache.myfaces.shared</groupId>
                   <artifactId>myfaces-shared-impl</artifactId>
-                  <version>2.0.3-SNAPSHOT</version>
+                  <version>2.0.3</version>
 		  <classifier>sources</classifier>
                 </artifactItem>
 
@@ -126,6 +126,7 @@
         </configuration>
       </plugin>
 
+      <!-- Comment out for the 1.1.4 release due to the snapshot dependency
       <plugin>
         <groupId>org.apache.myfaces.maven</groupId>
         <artifactId>wagon-maven-plugin</artifactId>
@@ -136,6 +137,7 @@
           <inputDirectory>target/assembly/out</inputDirectory>
         </configuration>
       </plugin>
+      -->
 
     </plugins>
 
