--- a/pom.xml
+++ b/pom.xml
@@ -42,23 +42,10 @@
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
-      <id>myfaces-repo</id>
-      <url>http://myfaces.zones.apache.org/dist/maven-repository</url>
+      <id>myfaces-staging</id>
+      <url>http://people.apache.org/builds/myfaces/m2-staging-repository</url>
     </repository>
   </repositories>
-  <distributionManagement>
-    <repository>
-      <id>apache.snapshots</id>
-      <name>Apache Maven Snapshot (and Test Build) Repository</name>
-      <url>scpexe://people.apache.org/www/people.apache.org/repo/m2-snapshot-repository</url>
-    </repository>
-    <snapshotRepository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>apache.snapshots</id>
-      <name>Apache Maven Snapshot Repository</name>
-      <url>scpexe://people.apache.org/www/people.apache.org/repo/m2-snapshot-repository</url>
-    </snapshotRepository>
-  </distributionManagement>
     <build>
         <pluginManagement>
             <plugins>
