--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -252,7 +252,7 @@
     <dependency>
       <groupId>org.apache.shale</groupId>
       <artifactId>shale-test</artifactId>
-      <version>1.0.3</version>
+      <version>1.0.4-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
