Missing http part in url for apache-maven-snapshots repository. Renamed id to apache.snapshots to match everything else
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@452653 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
-      <id>apache-maven-snapshots</id>
-      <url>people.apache.org/repo/m2-snapshot-repository</url>
+      <id>apache.snapshots</id>
+      <url>http://people.apache.org/repo/m2-snapshot-repository</url>
     </repository>
     <repository>
       <releases>
