Use the Tomcat 6 EL api and implementation jars, rather than Jetty.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@454811 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -88,11 +88,15 @@
     </profile>
   </profiles>
   <dependencies>
-      <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>jsp</artifactId>
-      <version>2.1-6.0.0rc0</version>
-      <scope>compile</scope>
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>el-api</artifactId>
+      <version>6.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>jasper-el</artifactId>
+      <version>6.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
