--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -219,12 +219,16 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <dependency>
-       <groupId>org.mortbay.jetty</groupId>
-       <artifactId>jsp</artifactId>
-       <version>2.1-6.0.0rc0</version>
-       <scope>provided</scope>
-    </dependency>    
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>el-api</artifactId>
+        <version>6.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>jasper-el</artifactId>
+        <version>6.0.0-SNAPSHOT</version>
+      </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
