--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -244,9 +244,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>myfaces</groupId>
+      <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-api</artifactId>
-      <version>1.1.1</version>
+      <version>1.1.4</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
