Uses the merged version of the maven-faces-plugin, from the trinidad project
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@481057 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -51,13 +51,14 @@
         </configuration>
       </plugin>-->
       <plugin>
+        <!--
+        this plugin needs to be built from
+        https://svn.apache.org/repos/asf/incubator/adffaces/branches/faces-1_2-061113/plugins/maven-faces-plugin
+        temporarily fetched from baranda's repo
+        -->
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <!-- special version from baranda's repository while the plugin is not
-        merged and released from the trinidad project
-        svn branch: https://svn.apache.org/repos/asf/incubator/adffaces/branches/myfaces-1_2-maven-faces-plugin
-        -->
-        <version>baranda-2.0-SNAPSHOT</version>
+        <version>incubator-1.2-m1-SNAPSHOT</version>
         <configuration>
           <taglibs>
             <f>http://java.sun.com/jsf/core</f>
