--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -26,12 +26,16 @@
       </resource>
     </resources>
     <plugins>
-      <!--<plugin>
+        <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.1.2</version>
         <configuration>
+          <excludes>
+            <exclude>**/Myfaces889TestCase*</exclude>
+          </excludes>
         </configuration>
       </plugin>
+      <!--<plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xslt-maven-plugin</artifactId>
