Fixes duplication of render-kit sections in generated faces-config.xml
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@493768 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -71,6 +71,7 @@
           <!--
           <faceletHandlerClass>org.apache.myfaces.trinidadinternal.facelets.TrinidadComponentHandler</faceletHandlerClass>
            -->
+          <packageContains>org.apache</packageContains>
           <skipApiOrBaseClasses>false</skipApiOrBaseClasses>
           <jsfVersion>1.2</jsfVersion>
           <force>true</force>
