JSR 252 - State management implementation complete
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@495909 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -32,6 +32,7 @@
         <configuration>
           <excludes>
             <exclude>**/Myfaces889TestCase*</exclude>
+            <exclude>**/JspStateManagerImplTest*</exclude>
           </excludes>
         </configuration>
       </plugin>
