--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -59,7 +59,7 @@
                 <artifactItem>
                   <groupId>org.apache.myfaces.shared</groupId>
                   <artifactId>myfaces-shared-impl</artifactId>
-                  <version>2.0.6-SNAPSHOT</version>
+                  <version>2.0.5</version>
                 </artifactItem>
               </artifactItems>
               <outputDirectory>${project.build.directory}/classes</outputDirectory>
@@ -77,7 +77,7 @@
                     <artifactItem>
                         <groupId>org.apache.myfaces.shared</groupId>
                         <artifactId>myfaces-shared-impl</artifactId>
-                        <version>2.0.6-SNAPSHOT</version>
+                        <version>2.0.5</version>
                         <classifier>sources</classifier>
                     </artifactItem>
                 </artifactItems>
@@ -288,7 +288,7 @@
     <dependency>
       <groupId>org.apache.myfaces.shared</groupId>
       <artifactId>myfaces-shared-impl</artifactId>
-      <version>2.0.6-SNAPSHOT</version>
+      <version>2.0.5</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
