--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>myfaces-core-project</artifactId>
     <groupId>org.apache.myfaces.core</groupId>
-    <version>1.1.5</version>
+    <version>1.1.6-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -13,9 +13,9 @@
     defined in JSR-127 (see also http://www.jcp.org/en/jsr/detail?id=127).
   </description>
   <scm>
-    <connection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_5</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_5</developerConnection>
-    <url>https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_5</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/api</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/api</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk/api</url>
   </scm>
   <profiles>
     <profile>
