1. Fixed assembly build (tlddoc and some sources where missing) 2. The generate-assembly profile is now automatically activated when performRelease=true
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@507357 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -20,6 +20,12 @@
   <profiles>
     <profile>
       <id>generate-assembly</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
