--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -159,8 +159,15 @@
         </plugins>
       </reporting>
     </profile>
+
     <profile>
       <id>generate-assembly</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
