--- a/api/pom.xml
+++ b/api/pom.xml
@@ -51,6 +51,13 @@
             </goals>
           </execution>
         </executions>
+        <dependencies>
+		    <dependency>
+		      <groupId>commons-logging</groupId>
+		      <artifactId>commons-logging</artifactId>
+		      <version>1.0.4</version>
+		    </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
