--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -334,6 +334,11 @@
       <version>1.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-annotation_1.0_spec</artifactId>
+      <version>1.0</version>
+    </dependency>    
   </dependencies>
   <reporting>
     <plugins>
